@@ -7,6 +7,7 @@ Revision history for DBIx::Class
           dispatcher, and a sybase-specific ::DBI::Sybase::ASE
         - Make sure populate() inherits the resultset conditions just
           like create() does
+        - Fix count/objects from search_related on limited resultset
 
 0.08114 2009-11-14 17:45:00 (UTC)
         - Preliminary support for MSSQL via DBD::ADO
